Add source has login admin and admin page